--- a/src/main-style.css
+++ b/src/main-style.css
@@ -56,6 +56,7 @@ h3 {
     padding: 20px;
     text-align: center;
     border-radius: 24px;
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5)
 }
 
 .ryad1 {
