--- a/src/main-style.css
+++ b/src/main-style.css
@@ -93,3 +93,51 @@ h3 {
     font-size: 100px;
     color: blue;
 }
+
+@font-face {
+    font-weight: 700; /* Соответствует значению bold */
+    font-family: RobotoRegular;
+    src: url("../src/fonts/Roboto-Regular.ttf");
+}
+
+a {
+    font-family: RobotoRegular;
+    outline: none;
+    text-decoration: none;
+    padding: 2px 1px 0;   
+}
+
+a:link {
+    color: #265301;
+}
+
+a:visited {
+    color: #437a16;
+}
+
+a:focus {
+    border-bottom: 1px solid;
+    background: #bae498;
+  }
+  
+  a:hover {
+    border-bottom: 1px solid;
+    background: #cdfeaa;
+  }
+  
+  a:active {
+    background: #265301;
+    color: #cdfeaa;
+  }
+
+  .ryad2 {
+    float: left;
+    margin: 0 15px 25px 200px;
+    width: 550px; 
+    height: 300px; 
+    background:#f1f1f1;
+    padding: 20px;
+    text-align: center;
+    border-radius: 24px;
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5)
+}
