--- a/src/main-stylejs.css
+++ b/src/main-stylejs.css
@@ -165,3 +165,23 @@ h1 {
     width: 100px;
     height: 100px;
 }
+
+header {
+    flex: 0 0 auto;
+    background: linear-gradient(45deg, rgb(242, 96, 0), rgb(217, 35, 35));
+    height: 120px;
+    width: 99.5%;
+    margin-bottom: 10px;
+}
+
+.main-content {
+    flex: 1 0 auto;
+}
+ 
+footer {
+    flex: 0 0 auto;
+    height: 100px;
+    width: 99.5%;
+    background: linear-gradient(45deg, rgb(242, 96, 0), rgb(217, 35, 35));
+    margin-top: 10px;
+}
